--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react-dom": "^18.0.0",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
