--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
