--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
+    "react-loader-spinner": "^6.1.6",
     "react-material-ui-carousel": "^3.4.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
